--- a/module_2/css/style.css
+++ b/module_2/css/style.css
@@ -64,7 +64,7 @@ body {
 }
 .header-nav__list a {
   text-decoration: none;
-  color: black;
+  color: #1d1919;
   font-size: 20px;
 }
 
@@ -135,10 +135,43 @@ body {
   gap: 10px;
 }
 
+.articles {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.articles-title {
+  text-align: center;
+  margin: 0;
+  font-size: 35px;
+  flex: 100%;
+}
+
+.article {
+  padding: 20px;
+  flex: 1;
+  font-size: 20px;
+  align-self: flex-start;
+}
+
+.article a {
+  text-decoration: underline;
+  color: #1d1919;
+}
+
+.article-info {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 .footer {
   background-color: #ceb8b086;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 30px;
+  border-radius: 15px 15px 0 0;
 }
